[BP-93] Fix timer not showing on google calendar (#115)

--- a/scripts-2.0/style/google-calendar.scss
+++ b/scripts-2.0/style/google-calendar.scss
@@ -1,5 +1,11 @@
 .tc-button.googlecalendar {
   &__entry {
-    margin: 6px 4px 0 0;
+    display: inline-flex;
+    cursor: pointer;
   }
+}
+.tc-widget-container{
+  display: flex;
+  margin: 7px auto;
+  height: 34px;
 }
